
# 0,1,0,20210110
	New Selection Set for Armature (Pose mode only) (View3D/ Rigth Panel/ Tool/ Selection)

# 0,1,0,20210106
	Backburner Tool Updated.
	"BsMax_2_80\tools\internal\render\backburner.py" Could be installed as a standalone addons too.
	The function that has changed timeline color on auto on cused to crash blender some time. disabled till find a solution.

# 0,1,0,20210103
	Submit Render jobs to Backburner (Original code from "Matt Ebb | Blaize | Anthony Hunt | Spirou4D") (For Now Windows Only).
	Updated "Backburner" addon for Blender 2.8x, 2.9x.
	Add Specific Frames type ('1,3,5-7') to "Backburner" tool.
	'Ctrl+Shift+A' Create primitive Menu added to blender key-maps mode.

# 0,1,0,20201229
	Armature.arrach operator bug fixed
	Hair guide from curve operator compatibility issue with Blender 2.91 fix.

# 0,1,0,20201227
	Delete_plus for object mode keep children transform on parent delete. ('Delete' Max mode)
	1,2,3 disabled for non converted primitive objects.
	Link_to operator issue with transformed parent Re-Link to other object fixed.
	'pose.select_hierarchy_plus' tool replased with 'pose.select_hierarchy' for defult blender mode. ('[' ']' in Blender mode).
	"DoublClick" select children in Pose mode (Blender mode)
	Additional object (Mesh,Curve,Text) can attach to bone custome shape in pose mode (works on Rest Positon mode).
	Transform/Rotation to Zero reset bone for pose mode rather than the armature position.

# 0,1,0,20201221
	Additional Primitives are create from search box (Search for 'Create' then choose the type).
	Additional Primitives are create from python Script (https://github.com/NevilArt/BsMax_2_80/wiki/bpy.ops.object.create).

# 0,1,0,20201216
	Create empty frame for using as joysticks border added for 'Joystic Creator'.
	'Ctrl + RMB' Select extended in max mode works better now.

# 0,1,0,20201215
	'Attach' tool collaps target objects modifiers before join. (for now works only for Mesh objects)

# 0,1,0,20201213