@@ -19,7 +19,6 @@ Note: Tasks in [] can't apply for now because of python API limitation, I am loo
 	Clone object shift drag
 	Extrude open edge with shift drag
 	Mimic the Slice modifire quick setup
-	Slide zoom Operator for maya navigation mode
 	video sequencer set current frame as first or last frame (range tool)
 	Network render manager
 	Global transform offset tool for selected objects in selected range
